--- a/program.htm
+++ b/program.htm
@@ -1738,44 +1738,44 @@ Simple DirectMedia Layer (SDL)</h3>
         <a href="program/sdl2_cpp_savepng.htm">
         Save PNG</a><br>
         
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_blit.htm">
-        Copy Surface</a><br>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_blit.htm">
+        Blit Surface</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_stretch.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_stretch.htm">
         Stretch Surface</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_convert.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_convert.htm">
         Convert Surface</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_rotate.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_rotate.htm">
         Rotate Render</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_colorkey.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_colorkey.htm">
         Color Key</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_keyboard.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_keyboard.htm">
         Keyboard Event</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_mouse.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_mouse.htm">
         Mouse Event</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_joystick.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_joystick.htm">
         Joystick Event</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_font.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_font.htm">
         Open Font</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_ticks.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_ticks.htm">
         Get Ticks</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
