--- a/program.htm
+++ b/program.htm
@@ -1778,66 +1778,54 @@ Simple DirectMedia Layer (SDL)</h3>
         <a href="program/sdl2_cpp_ticks.htm">
         Get Ticks</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_music.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_music.htm">
         Load Music</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_effect.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_effect.htm">
         Music Effect</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_pixels.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_pixels.htm">
         Pixels Manipulation</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_alpha.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_alpha.htm">
         Set Alpha</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_addtimer.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_addtimer.htm">
         Add Timer</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_bmp_rw.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_bmp_rw.htm">
         Load BMP from Memory</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_png_rw.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_png_rw.htm">
         Load PNG from Memory</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_font_rw.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_font_rw.htm">
         Open Font from Memory</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_music_rw.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_music_rw.htm">
         Load Music from Memory</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_effect_rw.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_effect_rw.htm">
         Music Effect from Memory</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_thread.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_thread.htm">
         Thread</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/sdl/v2.0/vsync.htm">
-    VSync</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/sdl2_vsync.htm">
+    如何設定VSync</a><br>
     
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/sdl/v1.2/audiodrv.htm">
-    SDL_AUDIODRIVER支援類型</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/sdl/v1.2/videodrv.htm">
-    SDL_VIDEODRIVER支援類型</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/sdl/v1.2/broken_mode.htm">
-    SDL_FB_BROKEN_MODES用途</a><br>
-
 &oplus;
 <b>OpenGL ES 2.0</b><br>
 
