--- a/program/wayland_client_pingpong.htm
+++ b/program/wayland_client_pingpong.htm
@@ -1,57 +1,14 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-  <link rel="shortcut icon" href="../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../../header.js"></script>
-<div id="page">
-<h3>Wayland &gt;&gt; Client</h3>
-<p><b>redraw pixel</b></p>
-<hr size="1">
+<h3><a href="../program.htm">程式語言</a> - Wayland - Client - <b>Ping Pong</b></h3>
+<hr size="1"><br>
 <p>
 參考資訊：<br>
-1. <a href="https://wayland.freedesktop.org/docs/html/apa.html">wayland</a><br>
-2. <a href="https://bugaevc.gitbooks.io/writing-wayland-clients/content/">writing-wayland-clients</a><br>
-3. <a href="https://jan.newmarch.name/Wayland/index.html">programming wayland clients</a><br><br>
+https://jan.newmarch.name/Wayland/index.html<br>
+https://wayland.freedesktop.org/docs/html/apa.html<br>
+https://bugaevc.gitbooks.io/writing-wayland-clients/content/<br><br>
 
 main.c
 </p>
@@ -63,12 +20,12 @@ main.c
 #include &lt;syscall.h&gt;
 #include &lt;unistd.h&gt;
 #include &lt;wayland-client.h&gt;
- 
+  
 #define WIDTH  640
 #define HEIGHT 480
 #define STRIDE (WIDTH * 2)
 #define SIZE   (STRIDE * HEIGHT)
-
+ 
 uint16_t *addr = NULL;
 struct wl_shm *shm = NULL;
 struct wl_buffer *buf = NULL;
@@ -80,26 +37,45 @@ struct wl_shm_pool *pool = NULL;
 struct wl_callback *frame = NULL;
 struct wl_compositor *comp = NULL;
 struct wl_shell_surface *shell_surf = NULL;
-
+ 
 void cb_remove(void *dat, struct wl_registry *reg, uint32_t id);
 void cb_redraw(void *dat, struct wl_callback *cb, uint32_t time);
 void cb_handle(void *dat, struct wl_registry *reg, uint32_t id, const char *intf, uint32_t ver);
 
+static void cb_ping(void *dat, struct wl_shell_surface *shell_surf, uint32_t serial)
+{
+    wl_shell_surface_pong(shell_surf, serial);
+}
+
+static void cb_configure(void *dat, struct wl_shell_surface *shell_surf, uint32_t edges, int32_t w, int32_t h)
+{
+}
+
+static void cb_popup_done(void *dat, struct wl_shell_surface *shell_surf)
+{
+}
+
+static const struct wl_shell_surface_listener cb_shell_surf = {
+    cb_ping,
+    cb_configure,
+    cb_popup_done
+};
+
 const struct wl_callback_listener cb_frame = {
     cb_redraw
 };
-
+ 
 struct wl_registry_listener cb_global = {
     .global = cb_handle,
     .global_remove = cb_remove
 };
- 
+  
 void cb_redraw(void *dat, struct wl_callback *cb, uint32_t time)
 {
     static int cnt = 0;
     wl_callback_destroy(frame);
     wl_surface_damage(surf, 0, 0, WIDTH, HEIGHT);
-
+ 
     int x = 0, y = 0;
     uint16_t *p = addr;
     uint16_t col[] = {0xf800, 0x7e0, 0x1f};
@@ -109,13 +85,13 @@ void cb_redraw(void *dat, struct wl_callback *cb, uint32_t time)
         }
     }
     cnt+= 1;
-
+ 
     frame = wl_surface_frame(surf);
     wl_surface_attach(surf, buf, 0, 0);
     wl_callback_add_listener(frame, &amp;cb_frame, NULL);
     wl_surface_commit(surf);
 }
-
+ 
 void cb_handle(void *dat, struct wl_registry *reg, uint32_t id, const char *intf, uint32_t ver)
 {
     if (strcmp(intf, "wl_compositor") == 0) {
@@ -128,44 +104,46 @@ void cb_handle(void *dat, struct wl_registry *reg, uint32_t id, const char *intf
         shell = wl_registry_bind(reg, id, &amp;wl_shell_interface, 1);
     }
 }
- 
+  
 void cb_remove(void *dat, struct wl_registry *reg, uint32_t id)
 {
 }
-
+ 
 int main(int argc, char **argv)
 {
     int fd = -1;
-
+ 
     dis = wl_display_connect(NULL);
     reg = wl_display_get_registry(dis);
-
+ 
     wl_registry_add_listener(reg, &amp;cb_global, NULL);
     wl_display_dispatch(dis);
     wl_display_roundtrip(dis);
     surf = wl_compositor_create_surface(comp);
     shell_surf = wl_shell_get_shell_surface(shell, surf);
     wl_shell_surface_set_toplevel(shell_surf);
-
+ 
     fd = syscall(SYS_memfd_create, "main", 0);
     ftruncate(fd, SIZE);
-
+ 
     addr = mmap(NULL, SIZE, PROT_READ | PROT_WRITE, MAP_SHARED, fd, 0);
     pool = wl_shm_create_pool(shm, fd, SIZE);
     buf = wl_shm_pool_create_buffer(pool, 0, WIDTH, HEIGHT, STRIDE, WL_SHM_FORMAT_RGB565);
     wl_shm_pool_destroy(pool);
 
+    wl_shell_surface_set_toplevel(shell_surf);
+    wl_shell_surface_add_listener(shell_surf, &amp;cb_shell_surf, NULL);
+
     frame = wl_surface_frame(surf);
     wl_callback_add_listener(frame, &amp;cb_frame, NULL);
-
+ 
     wl_surface_attach(surf, buf, 0, 0);
     wl_surface_commit(surf);
 
-    int cnt = 30;
-    while (cnt--) {
+    while (1) {
         wl_display_dispatch(dis);
     }
-
+ 
     wl_callback_destroy(frame);
     wl_shell_surface_destroy(shell_surf);
     wl_shell_destroy(shell);
@@ -181,19 +159,10 @@ int main(int argc, char **argv)
 </pre><br>
 
 <p>
-編譯、執行
+編譯
 </p>
 <pre>
 $ gcc main.c -o main -lwayland-client
-$ ./main
-</pre><br>
+</pre>
 
-<p>
-<br><a href="../../program.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
