--- a/program.htm
+++ b/program.htm
@@ -1930,41 +1930,41 @@ Wayland</h3>
 Rust</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="program/rust/setup.htm">
+&dash;
+<a href="program/rust_setup.htm">
 開發環境</a><br>
     
-&lowast;
-<a href="program/rust/hello.htm">
+&dash;
+<a href="program/rust_hello.htm">
 Hello, world!</a><br>
 
-&lowast;
-<a href="program/rust/sqlx.htm">
-SQLx</a><br>
+&dash;
+<a href="program/rust_sqlite.htm">
+SQLite</a><br>
 
-&lowast;
-<a href="program/rust/webserver.htm">
+&dash;
+<a href="program/rust_webserver.htm">
 Web Server</a><br>
 
-&lowast;
-<a href="program/rust/webform.htm">
-Web Server (Form)</a><br>
+&dash;
+<a href="program/rust_webform.htm">
+Web Server(Form)</a><br>
 
-&lowast;
-<a href="program/rust/webcrud.htm">
-Web Server (CRUD)</a><br>
+&dash;
+<a href="program/rust_webcrud.htm">
+Web Server(CRUD)</a><br>
 
-&lowast;
-<a href="program/rust/pi.htm">
+&dash;
+<a href="program/rust_pi.htm">
 PI - Monte Carlo</a><br>
 
-&lowast;
-<a href="program/rust/pi_thread.htm">
-PI - Monte Carlo (Parallelism)</a><br>
+&dash;
+<a href="program/rust_pi_thread.htm">
+PI - Monte Carlo(Parallelism)</a><br>
 
-&lowast;
-<a href="program/rust/pi_concurrency.htm">
-PI - Monte Carlo (Concurrency)</a><br>
+&dash;
+<a href="program/rust_pi_concurrency.htm">
+PI - Monte Carlo(Concurrency)</a><br>
 
 &oplus;
 <b>SDL v1.2</b><br>
