--- a/mcu.htm
+++ b/mcu.htm
@@ -2470,11 +2470,15 @@ build teensy_loader_cli</a><br>
 &dash;
 <a href="mcu/nano33ble_pinout.htm">
 接腳</a><br>
-    
+
 &dash;
 <a href="mcu/nano33ble_sch.htm">
 電路圖</a><br>
-    
+
+&dash;
+<a href="mcu/nano33ble_openocd.htm">
+如何透過ST-LINK V2燒錄程式(OpenOCD)</a><br>
+
 &oplus;
 <b>C/C++</b><br>
 
