--- a/program.htm
+++ b/program.htm
@@ -1969,20 +1969,20 @@ PI - Monte Carlo(Concurrency)</a><br>
 &oplus;
 <b>SDL v1.2</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/rust/sdl_hello.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/rust_sdl_hello.htm">
     Hello, world!</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/rust/sdl_fillcolor.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/rust_sdl_fill.htm">
     Fill Color</a><br>
             
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/rust/sdl_drawbox.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/rust_sdl_box.htm">
     Draw Box</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/rust/sdl_loadbmp.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/rust_sdl_bmp.htm">
     Load BMP</a><br>
 <br><br><br><br>
 
