--- a/program/rust_sdl_hello.htm
+++ b/program/rust_sdl_hello.htm
@@ -1,60 +1,18 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-  <link rel="shortcut icon" href="../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../../header.js"></script>
-<div id="page">
-<h3>Rust &gt;&gt; SDL v1.2</h3>
-<p><b>Hello, world!</b></p>
-<hr size="1">
+<h3><a href="../program.htm">程式語言</a> - Rust - SDL v1.2 - <b>Hello, world!</b></h3>
+<hr size="1"><br>
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/steward-fu/sdl-v1.2_in_rust/blob/master/src/sdl-demo/main.rs">rust-sdl</a><br>
-2. <a href="https://users.rust-lang.org/t/calling-c-function-with-string/41448/10">calling-c-function-with-string</a><br><br>
+https://www.rust-lang.org/learn/get-started<br>
+https://users.rust-lang.org/t/calling-c-function-with-string/41448/10<br>
+http://bzz.wallizard.com:8081/share/books/RUST/Programming%20Rust%202nd%20Edition.pdf<br><br>
 
 main.rs
 </p>
-<pre class="brush:cpp">
+<pre class="brush:rust">
 extern crate libc;
 
 use libc::types::os::arch::c95::c_schar;
@@ -172,15 +130,7 @@ $ cargo build
 $ cargo run
 </pre>
 <p>
-<img src="sdl_hello/1.jpg" class="maxSize">
+<img style="border:0px" src="rust_sdl_hello/1.jpg" class="maxSize">
 </p>
 
-<p>
-<br><a href="../../program.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
