--- a/program.htm
+++ b/program.htm
@@ -1988,18 +1988,18 @@ PI - Monte Carlo(Concurrency)</a><br>
 
 <div id="sfml"></div>
 <h3><img src="img/photos/sfml.jpg" class="floatLeft"/>
-SFML</h3>
+Simple and Fast Multimedia Library (SFML)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &oplus;
 <b>C/C++</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/sfml/cpp_setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/sfml_cpp_setup.htm">
     開發環境</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/sfml/cpp_hello.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/sfml_cpp_hello.htm">
     Hello, world!</a><br>
 <br><br><br><br>
 
