--- a/program.htm
+++ b/program.htm
@@ -2008,17 +2008,17 @@ Simple and Fast Multimedia Library (SFML)</h3>
 Golang</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="program/golang/setup.htm">
+&dash;
+<a href="program/golang_setup.htm">
 開發環境</a><br>
 
-&lowast;
-<a href="program/golang/hello.htm">
+&dash;
+<a href="program/golang_hello.htm">
 Hello, world!</a><br>
 
-&lowast;
-<a href="program/golang/fix_ver.htm">
-解決"cannot load io/fs: malformed module path io/fs"問題</a><br>
+&dash;
+<a href="program/golang_fix_ver.htm">
+解決Cannot load io/fs: malformed module path io/fs問題</a><br>
 <br><br><br><br>
 
 <div id="python"></div>
