--- a/program.htm
+++ b/program.htm
@@ -2026,100 +2026,44 @@ Hello, world!</a><br>
 Python</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="program/python/sha1.htm">
-SHA1</a><br>
-
-&lowast;
-<a href="program/python/mysql.htm">
-MySQL</a><br>
-
-&lowast;
-<a href="program/python/mongodb.htm">
-MongoDB</a><br>
-
-&lowast;
-<a href="program/python/treelib.htm">
-treelib</a><br>
-
-&lowast;
-<a href="program/python/xor.htm">
-XOR Binary</a><br>
-
-&lowast;
-<a href="program/python/outlook.htm">
-Outlook寄信</a><br>
-
-&lowast;
-<a href="program/python/webadv_upload.htm">
-webadv上傳檔案</a><br>
-
-&lowast;
-<a href="program/python/walk.htm">
-Walk Directory</a><br>
-
-&lowast;
-<a href="program/python/googletrans.htm">
-Google Translator</a><br>
-
-&lowast;
-<a href="program/python/commands.htm">
-取得Command Line結果</a><br>
-
-&lowast;
-<a href="program/python/dispatch_excel.htm">
-利用dispatch讀取excel</a><br>
-
-&lowast;
-<a href="program/python/proc_mem.htm">
-取得Process記憶體使用量</a><br>
-
-&lowast;
-<a href="program/python/download_file_googledrive.htm">
-下載Google Drive的檔案</a><br>
-
-&lowast;
-<a href="program/python/upload_zip_googledrive.htm">
-上傳ZIP檔案到Google Drive</a><br>
-
-&lowast;
-<a href="program/python/list_file_googledrive.htm">
-取得Google Drive的檔案列表</a><br>
-
-&lowast;
-<a href="program/python/iter.htm">
-Skip next item in for loop</a><br>
-
-&lowast;
-<a href="program/python/win32_running_services.htm">
-List Win32 Running Services</a><br>
-
-&lowast;
-<a href="program/python/unittest.htm">
-如何讓unittest只跑幾個特定的檔案</a><br>
-
-&lowast;
-<a href="program/python/fix_email.htm">
-解決"ImportError: cannot import name encoders"</a><br>
-
-&lowast;
-<a href="program/python/fix_unittest.htm">
-解決"No module named xmlrunner.__main__; xmlrunner"問題</a><br>
-
-&lowast;
-<a href="program/python/fix_cython.htm">
-解決"module object has no attribute directive_defaults"</a><br>
-
-&lowast;
-<a href="program/python/fix_acknowledgeabuse.htm">
-解決"This file has been identified as malware or spam and cannot be downloaded"</a><br>
-
 &oplus;
-<b>PyGtk</b><br>
+<b>v3.x</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/python/gtk_hello.htm">
-    hello, world!</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/python_graphviz.htm">
+    Graphviz</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/python_sha1.htm">
+    File SHA1</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/python_mysql.htm">
+    Connect MySQL</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/python_mongodb.htm">
+    Connect MongoDB</a><br>
+
+&dash;
+<a href="program/python_unittest.htm">
+如何讓Unittest只跑幾個特定的檔案</a><br>
+
+&dash;
+<a href="program/python_fix_encode.htm">
+解決Strings must be encoded before hashing問題</a><br>
+
+&dash;
+<a href="program/python_fix_email.htm">
+解決ImportError: cannot import name encoders問題</a><br>
+
+&dash;
+<a href="program/python_fix_unittest.htm">
+解決No module named xmlrunner.__main__; xmlrunner問題</a><br>
+
+&dash;
+<a href="program/python_fix_cython.htm">
+解決Module object has no attribute directive_defaults問題</a><br>
 <br><br><br><br>
 
 <div id="gtk"></div>
