--- a/program/opencv_avi_jpg.htm
+++ b/program/opencv_avi_jpg.htm
@@ -2,12 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../program.htm">程式語言</a> - OpenCV - Video Processing - <b>Play MP4</b></h3>
+<h3><a href="../program.htm">程式語言</a> - OpenCV - Video Processing - <b>Save Frame to JPG</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
-https://docs.opencv.org/master/d7/d9f/tutorial_linux_install.html<br>
-https://stackoverflow.com/questions/13709274/reading-video-from-file-opencv<br><br>
+https://docs.opencv.org/master/d7/d9f/tutorial_linux_install.html<br><br>
 
 main.cpp
 </p>
@@ -23,26 +22,21 @@ using std::string;
 int main(int argc, char **argv)
 {
     Mat frame;
-    VideoCapture capture("main.mp4");
 
-    if (!capture.isOpened())
+    VideoCapture cap("main.avi");
+    if (!cap.isOpened())
     {
-        printf("failed to load mp4");
+        printf("failed to load avi");
         return -1;
     }
 
-    namedWindow("w", 1);
-    while (1)
-    {
-        capture &gt;&gt; frame;
-        if (frame.empty())
-        {
-            break;
-        }
-        imshow("w", frame);
-        waitKey(20);
-    }
-    waitKey(0);
+    int cnt = cap.get(CAP_PROP_FRAME_COUNT);
+    printf("total frame: %d\n", cnt);
+
+    cap.set(CV_CAP_PROP_POS_FRAMES, 100);
+    cap &gt;&gt; frame;
+    imwrite("1.jpg", frame);
+    waitKey(3000);
     return 0;
 }
 </pre><br>
@@ -65,6 +59,14 @@ target_link_libraries(main ${OpenCV_LIBS})
 <pre>
 $ cmake .
 $ make
-</pre>
+</pre><br>
 
-<br><script type="text/javascript" src="../tail.js"></script>
+<p>
+<br><a href="../../program.htm">返回上一頁</a>
+</p>
+
+</div>
+</div>
+</div>
+</body>
+</html>
