--- a/program.htm
+++ b/program.htm
@@ -2353,8 +2353,12 @@ On Error Goto</a><br>
 C#</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="program/csharp/hello.htm">
+&dash;
+<a href="program/csharp_setup.htm">
+開發環境</a><br>
+
+&dash;
+<a href="program/csharp_hello.htm">
 Hello, world!</a><br>
 <br><br><br><br>
 
