MCU8051IDE Refined.

--- a/program.htm
+++ b/program.htm
@@ -2339,23 +2339,23 @@ Hello, world!</a><br>
 MCU 8051 IDE</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="mcu/mcu8051ide/setup.htm">
+&dash;
+<a href="program/8051_setup.htm">
 開發環境</a><br>
 
-&lowast;
-<a href="mcu/mcu8051ide/sfr.htm">
-Predefined SFR</a><br>
+&dash;
+<a href="program/8051_sfr.htm">
+SFR</a><br>
 
 &oplus;
 <b>Assembly</b><br>
     
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="mcu/mcu8051ide/asm_led.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/8051_asm_led.htm">
     LED</a><br>
     
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="mcu/mcu8051ide/asm_button.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/8051_asm_btn.htm">
     Button</a><br>
 <br><br><br><br>
 
