--- a/program.htm
+++ b/program.htm
@@ -38,6 +38,7 @@
     <a href="#csharp">          <img src="img/photos/csharp.jpg"        class="t0" title="C#"/></a>
     <a href="#mcu8051ide">      <img src="img/photos/mcu8051ide.jpg"    class="t0" title="MCU 8051 IDE"/></a>
     <a href="#npm">             <img src="img/photos/npm.jpg"           class="t0" title="Node.js"/></a>
+    <a href="#javascript">      <img src="img/photos/javascript.jpg"    class="t0" title="JavaScript"/></a>
     <a href="#java">            <img src="img/photos/java.jpg"          class="t0" title="Java"/></a>
     <a href="#leetcode">        <img src="img/photos/leetcode.jpg"      class="t0" title="LeetCode"/></a>
 </p>
@@ -2386,17 +2387,20 @@ Ping Command</a><br>
 如何透過Promise等待事件完成</a><br>
 <br><br><br><br>
 
+<div id="javascript"></div>
+<h3><img src="img/photos/javascript.jpg" class="floatLeft"/>
+JavaScript</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="program/js_write_text.htm">
+Write Text File</a><br>
+<br><br><br><br>
+
 <div id="java"></div>
 <h3><img src="img/photos/java.jpg" class="floatLeft"/>
 Java</h3>
 <hr size="1"><br><br><br><br><br>
-
-&oplus;
-<b>JavaScript</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/java/js_write_text.htm">
-    Write text file</a><br>
 
 &oplus;
 <b>Java Applet</b><br>
