--- a/program.htm
+++ b/program.htm
@@ -2403,10 +2403,10 @@ Java</h3>
 <hr size="1"><br><br><br><br><br>
 
 &oplus;
-<b>Java Applet</b><br>
+<b>Applet</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/java/applet_hello.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/java_applet_hello.htm">
     Hello, world!</a><br>
 <br><br><br><br>
 
